# qPhotogrammetry

./: CMakeLists.txt  README.md  main.cpp  qPhotogrammetry.cpp  qPhotogrammetry.h  qPhotogrammetry.qrc  qPhotogrammetryDlg.cpp  qPhotogrammetryDlg.h  qPhotogrammetryDlg.pro  qPhotogrammetryDlg.ui
SocketStub/: CMakeLists.txt  CMakeLists.txt~  SocketStub.cpp  SocketStub.h  socketstub.cpp~
